--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "displayName": "Harmony Dream",
     "description": "A harmonious and eye-pleasing theme for VS Code",
     "version": "0.0.1",
-    "publisher": "gigorgu",
+    "publisher": "Kostik427",
     "engines": {
         "vscode": "^1.75.0"
     },
@@ -22,7 +22,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/gigorgu/harmony-dream-theme"
+        "url": "https://github.com/Kostik427/HarmonyDream"
     },
     "keywords": [
         "theme",
